[gd_scene load_steps=8 format=3 uid="uid://f7insosbq0ml"]

[ext_resource type="Script" uid="uid://c662wob4l73qe" path="res://Scripts/main_menu.gd" id="1_48xlc"]
[ext_resource type="Texture2D" uid="uid://bnqvptef207d" path="res://Assets/Start menu.PNG" id="2_ce3w2"]
[ext_resource type="Texture2D" uid="uid://vplr0sex6kv7" path="res://Assets/Icons/play game button.PNG" id="3_opfnp"]
[ext_resource type="Texture2D" uid="uid://ceph3ddka0yv1" path="res://Assets/Icons/encyclopedia new botton.PNG" id="4_cp0ys"]
[ext_resource type="Texture2D" uid="uid://btbc1tjc1qw8d" path="res://Assets/Icons/help button.PNG" id="5_yhxw7"]
[ext_resource type="Texture2D" uid="uid://b0s1go1fm4kit" path="res://Assets/Icons/exit gmae button.PNG" id="6_trj04"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n45e2"]
texture = ExtResource("2_ce3w2")

[node name="Main_menu" type="CanvasLayer"]
script = ExtResource("1_48xlc")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_n45e2")

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 200

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="PlayGame" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4

[node name="PlayGameButton" type="Sprite2D" parent="Control/PanelContainer/MarginContainer/VBoxContainer/PlayGame"]
position = Vector2(113, 7)
scale = Vector2(0.35, 0.35)
texture = ExtResource("3_opfnp")

[node name="Encyclopedia" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4

[node name="EncyclopediaNewBotton" type="Sprite2D" parent="Control/PanelContainer/MarginContainer/VBoxContainer/Encyclopedia"]
position = Vector2(113, 8)
scale = Vector2(0.35, 0.35)
texture = ExtResource("4_cp0ys")

[node name="Help" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4

[node name="HelpButton" type="Sprite2D" parent="Control/PanelContainer/MarginContainer/VBoxContainer/Help"]
position = Vector2(113, 9)
scale = Vector2(0.35, 0.35)
texture = ExtResource("5_yhxw7")

[node name="Exit" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4

[node name="ExitGmaeButton" type="Sprite2D" parent="Control/PanelContainer/MarginContainer/VBoxContainer/Exit"]
position = Vector2(113, 10)
scale = Vector2(0.35, 0.35)
texture = ExtResource("6_trj04")

[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/PlayGame" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/PlayGame" to="." method="_on_play_game_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/Encyclopedia" to="." method="_on_encyclopedia_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
